--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,12 +13,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Set up Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v4
       with:
-        go-version: '1.20' 
+        go-version: '1.22' 
 
     - name: Check out code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Build Binary
       run: make build-ci
@@ -41,8 +41,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./build/proxy-fix-linux-amd64
-        asset_name: proxy-fix-linux-amd64
+        asset_path: ./build/proxy-fix-linux-amd64.tar.gz
+        asset_name: proxy-fix-linux-amd64.tar.gz
         asset_content_type: application/octet-stream
 
     - name: Upload Release Asset ARM64
@@ -52,6 +52,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./build/proxy-fix-linux-arm64
-        asset_name: proxy-fix-linux-arm64
+        asset_path: ./build/proxy-fix-linux-arm64.tar.gz
+        asset_name: proxy-fix-linux-arm64.tar.gz
         asset_content_type: application/octet-stream
